# SusConsoleDialogs

./: CMakeLists.txt  README.md
examples/: DialogWithVerificationExample.cpp  InputDialogExample.cpp  InputDialogTest.cpp  MessageDialogExample.cpp  OptionDialogTest.cpp  SelectDialogExample.cpp  SelectDialogSortExample.cpp  SimpleCalculatorExample.cpp  YesNoDialogTest.cpp
include/SusConsoleDialogs/: Dialog.h  InputDialog.h  MessageDialog.h  OptionDialog.h  SusConsoleDialogs.h  YesNoDialog.h  include.h
